<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:gravity="center_vertical|center_horizontal">



    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="260dp"
        android:layout_height="181dp"
        android:background="@drawable/bg_settings"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="0.56">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:id="@+id/linearLayout"
            android:layout_marginTop="124dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <CheckBox
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/music_cb"
                android:id="@+id/music_cb"
                android:layout_gravity="center"
                android:textSize="30dp"
                android:textColor="@android:color/black" />

            <CheckBox
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/sound_cb"
                android:id="@+id/sound_cb"
                android:layout_gravity="center"
                android:textSize="30dp"
                android:textColor="@android:color/black" />

            <CheckBox
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/vibro_cb"
                android:id="@+id/vibro_cb"
                android:layout_gravity="center"
                android:textSize="30dp"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <Button
            android:layout_width="197dp"
            android:layout_height="52dp"
            android:id="@+id/full_version_btn"
            android:background="@drawable/full_version_btn_selector"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="44dp" />

    </RelativeLayout>

</LinearLayout>